# Cafe_management_system

./: README.md  pyproject.toml  pytest.ini
config/: settings.py  urls.py
item/: admin.py  models.py  serializers.py  urls.py
item/migrations/: 0001_initial.py
order/: admin.py  forms.py  models.py  serializers.py  services.py  urls.py  views.py
order/migrations/: 0001_initial.py  0002_alter_order_total_price.py  0003_alter_order_total_price.py  0004_alter_order_total_price.py  0005_alter_order_status.py
order/templates/order/: base.html  order_confirm_delete.html  order_detail.html  order_form.html  order_list.html  revenue.html  search_order.html
order/templates/order/includes/: inc_menu.html
order/tests/: conftest.py  test_order_services.py  test_order_views.py
users/: models.py  urls.py
users/migrations/: 0001_initial.py
