[tool.poetry]
name = "cafe-order-management-system"
version = "0.1.0"
description = ""
authors = ["Alexandra Goldobina <goldobina.s@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
python-dotenv = "^1.0.1"
black = "^25.1.0"
isort = "^6.0.0"
psycopg2-binary = "^2.9.10"
ipython = "^8.32.0"
crispy-bootstrap5 = "^2024.10"
djangorestframework = "^3.15.2"
django-filter = "^25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
